# Hackflow

./: .gitignore  Cargo.toml  README.md  config.toml  nueva_version.md
examples/: osint_workflow.lua  recon.lua  recon_workflow.lua  simple_workflow.lua  test_workflow.lua
reconocimiento/pasivo/: sitca-ve-com_dnsrecon_std_20250409_1618.csv  sitca-ve-com_dnsrecon_std_20250409_1618.json  sitca-ve-com_dnsrecon_std_20250409_1622.csv  sitca-ve-com_dnsrecon_std_20250409_1622.json  sitca-ve-com_dnsrecon_std_20250409_1635.csv  sitca-ve-com_dnsrecon_std_20250409_1635.json  sitca-ve-com_dnsrecon_std_20250409_1641.csv  sitca-ve-com_dnsrecon_std_20250409_1641.json  sitca-ve-com_dnsrecon_std_20250410_1059.csv  sitca-ve-com_dnsrecon_std_20250410_1059.json  sitca-ve-com_dnsrecon_std_20250410_1059_stdout.txt
src/: config.rs  main.rs
src/application/: mod.rs  workflow_runner.rs
src/domain/: mod.rs  ports.rs  task.rs  values.rs  workflow.rs
src/flow/: core.rs  lua_bindings.rs  mod.rs  task.rs  task_executor.rs
src/flow/tasks/: create_dir_task.rs  dns_lookup_task.rs  export_csv.rs  mod.rs  print_task.rs  run_command_task.rs
src/infrastructure/: lua_script_engine.rs  mod.rs  system_command_executor.rs  workflow_loader.rs
workflows/: icmp_workflow.json  nmap_workflow.json
